# streamlit-finances

./: .gitignore  README.md  dashboard.py  dockerfile  pyproject.toml  requirements.txt  teste.html
files/: ativos_data.json  dre_data.json
src/: assistant.py  chat.py  get_data.py  luz.py  update_vectordb.py
