[tool.poetry]
name = "streamlit-finances"
version = "0.1.0"
description = ""
authors = ["lksprado <lks-prado@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.10.0"
isort = "^5.13.2"
taskipy = "^1.14.0"
streamlit = "^1.40.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.taskipy.tasks]
format = """
isort . 
black .
"""
kill = "kill -9 $(lsof -t -i :8000)"
test = "pytest -v"
run = """ python3 app/main.py """
doc = "mkdocs serve"

